--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -2,5 +2,5 @@
 	<li><a href="/">home</a></li>
 	<li><a href="/about">about</a></li>
 	<li><a href="/json">json</a></li>
-	<li></li>
+	<li><a href="/projects">projects</a></li>
 </ul>
